# jot

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go  project.clj
cmd/: edit.go  init.go  list.go  read.go  root.go  write.go
doc/: intro.md
internal/: app.go  entry.go
src/: create.rs  init.rs  main.rs
src/jot/: core.clj  entry.clj  git.clj
test/jot/: core_test.clj
