[package]
name = "jot"
version = "0.2.0"
authors = ["Joel Holmes <jholmes@ecr.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
rustyline = "6.0.0"
git2 = "0.10"
dirs = "2.0"
rand = "0.7.3"
chrono = "0.4"
